fix: remove horizontal scroll

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 html {
     width: 100vw;
+    overflow-x: hidden;
 }
+
 body {
     font-family: 'Inter';
     width: 50%;
